[package]
name = "sxhkd-mode"
version = "0.1.0"
authors = ["Daniel Sockwell <dsockwell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
strum = "0.16.0"
strum_macros = "0.16.0"
utils = {path = "../utils"}
serde = "1.0.104"
