[package]
name = "sxhkd-mode"
version = "0.1.0"
authors = ["Daniel Sockwell <dsockwell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { git = "https://github.com/clap-rs/clap" }
config = "0.10.1"
regex = "1.3.3"
utils = {path = "../utils"}
run_script = "0.6.0"
dirs = "2.0.2"

[profile.release]
lto = true
